--- a/test.ipynb
+++ b/test.ipynb
@@ -116,6 +116,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "data0 = np.load(\"data/nerf_llff_data/fern/masks_4_bak.npz\", allow_pickle=True)['arr_0'].tolist()\n",
+    "data1 = np.load(\"data/nerf_llff_data/fern/masks_4.npz\", allow_pickle=True)['arr_0'].tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-0.0762,  0.0387,  0.0128,  ..., -0.0041, -0.0421,  0.0191],\n",
+       "        [-0.0236,  0.0532, -0.0014,  ..., -0.0499, -0.0113,  0.0258],\n",
+       "        [-0.0670,  0.0262, -0.0042,  ..., -0.0072, -0.0477,  0.0096],\n",
+       "        ...,\n",
+       "        [-0.0403, -0.0014, -0.0152,  ..., -0.0536, -0.0237,  0.0604],\n",
+       "        [-0.0309, -0.0328, -0.0122,  ..., -0.0247,  0.0029,  0.0713],\n",
+       "        [-0.0269,  0.0552, -0.0201,  ..., -0.0583, -0.0537,  0.0267]],\n",
+       "       device='cuda:0', dtype=torch.float16)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data0['clip_embeddings']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0.0629, -0.0478, -0.0943,  ...,  0.0510,  0.0262, -0.0067],\n",
+       "        [ 0.0202,  0.0167, -0.0878,  ...,  0.0038, -0.0359,  0.0283],\n",
+       "        [-0.0136,  0.0120, -0.1113,  ..., -0.0403,  0.0335,  0.0578],\n",
+       "        ...,\n",
+       "        [ 0.0484, -0.0156, -0.0248,  ...,  0.0034,  0.0048,  0.0150],\n",
+       "        [-0.0069, -0.0038, -0.0160,  ...,  0.0288, -0.0051,  0.0077],\n",
+       "        [-0.0023,  0.0304,  0.0304,  ...,  0.0354, -0.0105,  0.0276]],\n",
+       "       device='cuda:0')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data1[\"aggregation_clip_embeddings\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
